# jipp2

./: CMakeLists.txt
Matrix/: CMakeLists.txt
Matrix/matrixApp/: CMakeLists.txt  main.cpp
Matrix/matrixLib/: CMakeLists.txt  matrixLib.cpp  matrixLib.h
Projekt/: CMakeLists.txt
Projekt/quizApp/: Arytmetyka.cpp  Geometria.cpp  Licznik.cpp  Odp.cpp  Pradwop.cpp  Pytania.cpp  dane.txt  main.cpp  odp.txt  quiz.cpp  sortowanie.cpp
Projekt/quizLib/: Arytmetyka.h  Geometria.h  Licznik.h  Odp.h  Prawdop.h  Pytania.h  quiz.h
Triangle/: CMakeLists.txt
Triangle/include/: Triangle.cpp  Triangle.h
Triangle/src/: main.cpp
allocation_basics/: main.cpp
class/: CMakeLists.txt
class/include/: class.cpp  class.h
class/src/: main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
lab2/include/: functions.cpp  functions.h
lab2/src/: main.cpp
lab4/: CMakeLists.txt
lab4/include/: lab4.cpp  lab4.h
lab4/src/: main.cpp
lab5/: CMakeLists.txt
lab5/include/: Point.h
lab5/src/: Point.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/include/: lab6.h
lab6/src/: lab6.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/include/: lab7.cpp  lab7.h
lab7/src/: main.cpp
lab8/: CMakeLists.txt
lab8/include/: Line.cpp  Line.h  Stop.cpp  Stop.h  TimeMeasure.h  lab8.cpp  lab8.h
lab8/src/: TimeMeasure.cpp  main.cpp
simpleCalc/: main.cpp
simpleCalc/include/: calc.cpp  calc.h
simpleCalc/src/: main.cpp
